# relativity

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
crates/asteroids/: Cargo.toml
crates/asteroids/src/: camera.rs  lib.rs  main.rs  relative_object.rs  setup.rs  update_observer.rs
crates/relativity/: Cargo.toml
crates/relativity/src/: coordinate.rs  lib.rs  light_cone.rs  velocity.rs  world_line.rs
crates/relativity/tests/: light_cone.rs  test_transform_coordinates.rs  test_world_line.rs
crates/stars/: Cargo.toml
crates/stars/src/: camera.rs  lib.rs  main.rs  relative_object.rs  setup.rs  update_observer.rs
crates/stars/src/ui/: debug_text.rs  mod.rs  setup.rs
notes/: cheatcheet.md
